Added checkboxes, titles and separators to createPredictionView. TODO: chequear que el width del window se condiga con el de los elementos que contiene.

--- a/src/fxml/createPredictionView.fxml
+++ b/src/fxml/createPredictionView.fxml
@@ -2,33 +2,296 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<StackPane fx:id="createPredictionView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.65" fx:controller="CreatePredictionController">
-  <children>
-    <BorderPane prefHeight="200.0" prefWidth="200.0">
-      <bottom>
-        <Button fx:id="ButtonPredict" defaultButton="true" mnemonicParsing="false" onAction="#predict" text="Predict" BorderPane.alignment="CENTER">
-          <opaqueInsets>
-            <Insets />
-          </opaqueInsets>
-        </Button>
-      </bottom>
-      <top>
-        <VBox prefHeight="57.0" prefWidth="700.0" BorderPane.alignment="CENTER">
-          <children>
-            <Label fx:id="PredictionTitle" alignment="TOP_CENTER" prefHeight="27.0" prefWidth="701.0" text="Predicción de Trastornos" textAlignment="CENTER">
-              <font>
-                <Font name="System Bold" size="22.0" />
-              </font>
+<BorderPane fx:id="predictionBorder" prefHeight="449.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CreatePredictionController">
+   <center>
+      <HBox BorderPane.alignment="CENTER">
+         <children>
+            <VBox prefHeight="323.0">
+               <children>
+                  <VBox prefHeight="142.0">
+                     <children>
+                        <Label alignment="TOP_CENTER" text="Dolor">
+                           <font>
+                              <Font name="Arial Bold Italic" size="13.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <CheckBox fx:id="dolorDienteFlojoCheck" mnemonicParsing="false" text="Sensacion de diente flojo">
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="dolorTemporomandibularesCheck" mnemonicParsing="false" text="Temporomandibulares">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="dolorArticulacionesCheck" mnemonicParsing="false" text="En las articulaciones">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="dolorCabezaCheck" mnemonicParsing="false" text="De cabeza">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="dolorMorderCheck" mnemonicParsing="false" text="Al morder">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="dolorTragarCheck" mnemonicParsing="false" text="Al tragar">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets top="-5.0" />
+                     </VBox.margin>
+                  </VBox>
+                  <Separator>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </Separator>
+                  <VBox prefHeight="123.0">
+                     <children>
+                        <Label alignment="TOP_CENTER" text="Enfermedades">
+                           <font>
+                              <Font name="Arial Bold Italic" size="13.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <CheckBox fx:id="enfermedadFlujoSalivalReducidoCheck" mnemonicParsing="false" text="Flujo salival reducido">
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="enfermedadDefectoDentalCheck" mnemonicParsing="false" text="Defectos dentales">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="enfermedadObesidadCheck" mnemonicParsing="false" text="Obesidad">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="enfermedadDiabetesCheck" layoutX="10.0" layoutY="92.0" mnemonicParsing="false" text="Diabetes">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                     </children>
+                  </VBox>
+                  <Separator>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </Separator>
+               </children>
+               <HBox.margin>
+                  <Insets left="5.0" right="5.0" top="5.0" />
+               </HBox.margin>
+            </VBox>
+            <VBox layoutX="10.0" layoutY="10.0" prefHeight="305.0">
+               <children>
+                  <VBox prefHeight="169.0">
+                     <children>
+                        <Label alignment="TOP_CENTER" text="Habitos">
+                           <font>
+                              <Font name="Arial Bold Italic" size="13.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <CheckBox fx:id="habitoDietaExcesivaCarbohidratosAzucaresCheck" mnemonicParsing="false" text="Exceso de carbohidratos y azucar">
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="habitoControlInadecuadoPlacaCheck" mnemonicParsing="false" text="Control inadecuado de placa">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="habitoDietaCarenteVitaminaC" mnemonicParsing="false" text="Dieta carente de vitamina C">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="habitoFumarCheck" mnemonicParsing="false" text="Fumar">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets top="-5.0" />
+                     </VBox.margin>
+                  </VBox>
+                  <Separator>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </Separator>
+                  <VBox prefHeight="123.0">
+                     <children>
+                        <Label alignment="TOP_CENTER" text="Salud">
+                           <font>
+                              <Font name="Arial Bold Italic" size="13.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <CheckBox fx:id="saludSalivaCheck" mnemonicParsing="false" text="Exceso de saliva">
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="saludExcesoPlacaCheck" mnemonicParsing="false" text="Exceso de placa">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="saludMalAlientoCheck" mnemonicParsing="false" text="Mal aliento">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                     </children>
+                  </VBox>
+                  <Separator>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </Separator>
+               </children>
+               <HBox.margin>
+                  <Insets left="5.0" right="5.0" top="5.0" />
+               </HBox.margin>
+            </VBox>
+            <VBox layoutX="208.0" layoutY="10.0" prefHeight="305.0">
+               <children>
+                  <VBox prefHeight="169.0">
+                     <children>
+                        <Label alignment="TOP_CENTER" text="Inflamacion">
+                           <font>
+                              <Font name="Arial Bold Italic" size="13.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <CheckBox fx:id="inflamacionEnrojecimientoEnciasCheck" mnemonicParsing="false" text="Enrojecimiento de las encias">
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="inflamacionHinchazonEnciasCheck" mnemonicParsing="false" text="Hinchazon de las encias">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="inflamacionSangradoEnciasCheck" mnemonicParsing="false" text="Sangrado de encias">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="inflamacionBruxismoCheck" mnemonicParsing="false" text="Bruxismo">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets top="-5.0" />
+                     </VBox.margin>
+                  </VBox>
+                  <Separator>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </Separator>
+                  <VBox prefHeight="123.0">
+                     <children>
+                        <Label alignment="TOP_CENTER" text="Sensibilidad">
+                           <font>
+                              <Font name="Arial Bold Italic" size="13.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <CheckBox fx:id="sensibilidadCalorCheck" mnemonicParsing="false" text="Al calor">
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="sensibilidadFrioCheck" mnemonicParsing="false" text="Al frio">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                     </children>
+                  </VBox>
+                  <Separator>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </Separator>
+               </children>
+               <HBox.margin>
+                  <Insets left="5.0" right="5.0" top="5.0" />
+               </HBox.margin>
+            </VBox>
+         </children>
+         <BorderPane.margin>
+            <Insets top="10.0" />
+         </BorderPane.margin>
+      </HBox>
+   </center>
+   <bottom>
+      <VBox alignment="TOP_CENTER" prefHeight="97.0" prefWidth="640.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="ButtonPredict" alignment="TOP_CENTER" defaultButton="true" mnemonicParsing="false" onAction="#predict" text="Predict">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </Button>
+         </children>
+      </VBox>
+   </bottom>
+   <top>
+      <VBox alignment="TOP_CENTER" prefHeight="24.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label fx:id="PredictionTitle" alignment="TOP_CENTER" contentDisplay="CENTER" text="Prediccion de Trastornos" textAlignment="CENTER">
+               <font>
+                  <Font name="Arial Black" size="18.0" />
+               </font>
             </Label>
-          </children>
-        </VBox>
-      </top>
-    </BorderPane>
-  </children>
-</StackPane>
+            <Separator>
+               <VBox.margin>
+                  <Insets top="15.0" />
+               </VBox.margin>
+            </Separator>
+         </children>
+      </VBox>
+   </top>
+</BorderPane>
