--- a/src/fxml/createPredictionView.fxml
+++ b/src/fxml/createPredictionView.fxml
@@ -10,13 +10,45 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="predictionBorder" prefHeight="449.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CreatePredictionController">
-   <center>
-      <HBox BorderPane.alignment="CENTER">
+<BorderPane fx:id="predictionBorder" prefHeight="449.0" xmlns="http://javafx.com/javafx/8.0.72" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CreatePredictionController">
+   <bottom>
+      <VBox alignment="TOP_CENTER" prefHeight="97.0" prefWidth="640.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox prefHeight="323.0">
+            <Button fx:id="ButtonPredict" alignment="TOP_CENTER" defaultButton="true" mnemonicParsing="false" onAction="#predict" text="Predict">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </Button>
+         </children>
+      </VBox>
+   </bottom>
+   <top>
+      <VBox alignment="TOP_CENTER" prefHeight="24.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label fx:id="PredictionTitle" alignment="TOP_CENTER" contentDisplay="CENTER" text="Prediccion de Trastornos" textAlignment="CENTER">
+               <font>
+                  <Font name="Arial Black" size="18.0" />
+               </font>
+            </Label>
+            <Separator>
+               <VBox.margin>
+                  <Insets top="15.0" />
+               </VBox.margin>
+            </Separator>
+         </children>
+      </VBox>
+   </top>
+   <center>
+      <VBox prefHeight="200.0" prefWidth="100.0" spacing="30.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label alignment="CENTER" text="Síntomas" underline="true">
+               <font>
+                  <Font size="22.0" />
+               </font>
+            </Label>
+            <HBox fx:id="sintomasHBox" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
                <children>
-                  <VBox prefHeight="142.0">
+                  <VBox fx:id="dolorVBox" prefHeight="142.0">
                      <children>
                         <Label alignment="TOP_CENTER" text="Dolor">
                            <font>
@@ -57,16 +89,98 @@
                            </VBox.margin>
                         </CheckBox>
                      </children>
-                     <VBox.margin>
-                        <Insets top="-5.0" />
-                     </VBox.margin>
                   </VBox>
-                  <Separator>
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </Separator>
-                  <VBox prefHeight="123.0">
+                  <VBox fx:id="sensibilidadVBox" prefHeight="123.0">
+                     <children>
+                        <Label alignment="TOP_CENTER" text="Sensibilidad">
+                           <font>
+                              <Font name="Arial Bold Italic" size="13.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <CheckBox fx:id="sensibilidadCalorCheck" mnemonicParsing="false" text="Al calor">
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="sensibilidadFrioCheck" mnemonicParsing="false" text="Al frio">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                     </children>
+                  </VBox>
+                  <VBox fx:id="inflamacionVBox" prefHeight="169.0">
+                     <children>
+                        <Label alignment="TOP_CENTER" text="Inflamacion">
+                           <font>
+                              <Font name="Arial Bold Italic" size="13.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <CheckBox fx:id="inflamacionEnrojecimientoEnciasCheck" mnemonicParsing="false" text="Enrojecimiento de las encias">
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="inflamacionHinchazonEnciasCheck" mnemonicParsing="false" text="Hinchazon de las encias">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="inflamacionSangradoEnciasCheck" mnemonicParsing="false" text="Sangrado de encias">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="inflamacionBruxismoCheck" mnemonicParsing="false" text="Bruxismo">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                     </children>
+                  </VBox>
+                  <VBox fx:id="saludVBox" prefHeight="123.0">
+                     <children>
+                        <Label alignment="TOP_CENTER" text="Salud">
+                           <font>
+                              <Font name="Arial Bold Italic" size="13.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <CheckBox fx:id="saludSalivaCheck" mnemonicParsing="false" text="Exceso de saliva">
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="saludExcesoPlacaCheck" mnemonicParsing="false" text="Exceso de placa">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="saludMalAlientoCheck" mnemonicParsing="false" text="Mal aliento">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+            <Label text="Factores de Riesgo" underline="true">
+               <font>
+                  <Font size="19.0" />
+               </font>
+            </Label>
+            <HBox fx:id="factoresDeRiesgoHBox" prefHeight="100.0" prefWidth="200.0" spacing="45.0">
+               <children>
+                  <VBox fx:id="enfermedadesVBox" prefHeight="123.0">
                      <children>
                         <Label alignment="TOP_CENTER" text="Enfermedades">
                            <font>
@@ -98,19 +212,7 @@
                         </CheckBox>
                      </children>
                   </VBox>
-                  <Separator>
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </Separator>
-               </children>
-               <HBox.margin>
-                  <Insets left="5.0" right="5.0" top="5.0" />
-               </HBox.margin>
-            </VBox>
-            <VBox layoutX="10.0" layoutY="10.0" prefHeight="305.0">
-               <children>
-                  <VBox prefHeight="169.0">
+                  <VBox fx:id="habitosVBox" prefHeight="169.0">
                      <children>
                         <Label alignment="TOP_CENTER" text="Habitos">
                            <font>
@@ -141,157 +243,10 @@
                            </VBox.margin>
                         </CheckBox>
                      </children>
-                     <VBox.margin>
-                        <Insets top="-5.0" />
-                     </VBox.margin>
                   </VBox>
-                  <Separator>
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </Separator>
-                  <VBox prefHeight="123.0">
-                     <children>
-                        <Label alignment="TOP_CENTER" text="Salud">
-                           <font>
-                              <Font name="Arial Bold Italic" size="13.0" />
-                           </font>
-                           <VBox.margin>
-                              <Insets top="10.0" />
-                           </VBox.margin>
-                        </Label>
-                        <CheckBox fx:id="saludSalivaCheck" mnemonicParsing="false" text="Exceso de saliva">
-                           <VBox.margin>
-                              <Insets top="10.0" />
-                           </VBox.margin>
-                        </CheckBox>
-                        <CheckBox fx:id="saludExcesoPlacaCheck" mnemonicParsing="false" text="Exceso de placa">
-                           <VBox.margin>
-                              <Insets top="5.0" />
-                           </VBox.margin>
-                        </CheckBox>
-                        <CheckBox fx:id="saludMalAlientoCheck" mnemonicParsing="false" text="Mal aliento">
-                           <VBox.margin>
-                              <Insets top="5.0" />
-                           </VBox.margin>
-                        </CheckBox>
-                     </children>
-                  </VBox>
-                  <Separator>
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </Separator>
                </children>
-               <HBox.margin>
-                  <Insets left="5.0" right="5.0" top="5.0" />
-               </HBox.margin>
-            </VBox>
-            <VBox layoutX="208.0" layoutY="10.0" prefHeight="305.0">
-               <children>
-                  <VBox prefHeight="169.0">
-                     <children>
-                        <Label alignment="TOP_CENTER" text="Inflamacion">
-                           <font>
-                              <Font name="Arial Bold Italic" size="13.0" />
-                           </font>
-                           <VBox.margin>
-                              <Insets top="10.0" />
-                           </VBox.margin>
-                        </Label>
-                        <CheckBox fx:id="inflamacionEnrojecimientoEnciasCheck" mnemonicParsing="false" text="Enrojecimiento de las encias">
-                           <VBox.margin>
-                              <Insets top="10.0" />
-                           </VBox.margin>
-                        </CheckBox>
-                        <CheckBox fx:id="inflamacionHinchazonEnciasCheck" mnemonicParsing="false" text="Hinchazon de las encias">
-                           <VBox.margin>
-                              <Insets top="5.0" />
-                           </VBox.margin>
-                        </CheckBox>
-                        <CheckBox fx:id="inflamacionSangradoEnciasCheck" mnemonicParsing="false" text="Sangrado de encias">
-                           <VBox.margin>
-                              <Insets top="5.0" />
-                           </VBox.margin>
-                        </CheckBox>
-                        <CheckBox fx:id="inflamacionBruxismoCheck" mnemonicParsing="false" text="Bruxismo">
-                           <VBox.margin>
-                              <Insets top="5.0" />
-                           </VBox.margin>
-                        </CheckBox>
-                     </children>
-                     <VBox.margin>
-                        <Insets top="-5.0" />
-                     </VBox.margin>
-                  </VBox>
-                  <Separator>
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </Separator>
-                  <VBox prefHeight="123.0">
-                     <children>
-                        <Label alignment="TOP_CENTER" text="Sensibilidad">
-                           <font>
-                              <Font name="Arial Bold Italic" size="13.0" />
-                           </font>
-                           <VBox.margin>
-                              <Insets top="10.0" />
-                           </VBox.margin>
-                        </Label>
-                        <CheckBox fx:id="sensibilidadCalorCheck" mnemonicParsing="false" text="Al calor">
-                           <VBox.margin>
-                              <Insets top="10.0" />
-                           </VBox.margin>
-                        </CheckBox>
-                        <CheckBox fx:id="sensibilidadFrioCheck" mnemonicParsing="false" text="Al frio">
-                           <VBox.margin>
-                              <Insets top="5.0" />
-                           </VBox.margin>
-                        </CheckBox>
-                     </children>
-                  </VBox>
-                  <Separator>
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </Separator>
-               </children>
-               <HBox.margin>
-                  <Insets left="5.0" right="5.0" top="5.0" />
-               </HBox.margin>
-            </VBox>
+            </HBox>
          </children>
-         <BorderPane.margin>
-            <Insets top="10.0" />
-         </BorderPane.margin>
-      </HBox>
+      </VBox>
    </center>
-   <bottom>
-      <VBox alignment="TOP_CENTER" prefHeight="97.0" prefWidth="640.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button fx:id="ButtonPredict" alignment="TOP_CENTER" defaultButton="true" mnemonicParsing="false" onAction="#predict" text="Predict">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-            </Button>
-         </children>
-      </VBox>
-   </bottom>
-   <top>
-      <VBox alignment="TOP_CENTER" prefHeight="24.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label fx:id="PredictionTitle" alignment="TOP_CENTER" contentDisplay="CENTER" text="Prediccion de Trastornos" textAlignment="CENTER">
-               <font>
-                  <Font name="Arial Black" size="18.0" />
-               </font>
-            </Label>
-            <Separator>
-               <VBox.margin>
-                  <Insets top="15.0" />
-               </VBox.margin>
-            </Separator>
-         </children>
-      </VBox>
-   </top>
 </BorderPane>
